tests/baselines/reference/parserEnum3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum3.ts (1 errors) ====
    
    
        export enum SignatureFlags {
                    ~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
        }